# bioyino

./: CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  rustfmt.toml
.github/workflows/: ci.yml
contrib/common/: bioyino.env
contrib/deb/: bioyino.service
contrib/fpm/: create_package_deb.sh  create_package_rpm.sh  post_install.sh  post_uninstall.sh
contrib/rhel/: bioyino.service
doc/: FAQ.md  aggregation.md  consensus.md  glossary.md  threading.md
examples/: cluster.toml
metric/: Cargo.toml
metric/src/: lib.rs  metric.rs  parser.rs
schema/: protocol.capnp
src/: aggregate.rs  async_udp.rs  bigint.rs  cache.rs  carbon.rs  codec.rs  config.rs  consul.rs  errors.rs  fast_task.rs  main.rs  management.rs  metric.rs  parser.rs  peer.rs  raft.rs  server.rs  slow_task.rs  stats.rs  sync_udp.rs  task.rs  udp.rs  util.rs
test/fixtures/: config.toml  full.toml
