[package]
name = "bioyino"
version = "0.6.0"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]
description = "StatsD-compatible, high-performance, fault-tolerant metric aggregator"
edition = "2018"
build = "build.rs"

[profile.release]
lto = true
overflow-checks = false

[dependencies]
lazy_static="^1.1"
clap="^2.31"
failure="^0.1"
failure_derive="^0.1"
libc="^0.2"
num_cpus="^1.8"
futures="^0.1"
tokio="^0.1"
tokio-io="^0.1"
tokio-codec="^0.1"
bytes = { version = "^0.4", features = [ "serde" ] }
resolve="^0.2"
net2="^0.2"
combine="^3.8"
hyper="^0.12"
mime="^0.3"
serde="^1.0"
serde_derive="^1.0"
serde_json="^1.0"
slog="^2.4"
slog-term="^2.4"
slog-async="^2.3"
slog-scope="^4.0"
slog-stdlog="^4.0"
log="^0.4"
toml="^0.5"
ftoa = "^0.1"
capnp = "^0.10"
capnp-futures = "^0.10"
raft-tokio = { git = "https://github.com/Albibek/raft-tokio" }
rand = "^0.6"
rayon = "^1.0"
bioyino-metric = "^0.2"

[build-dependencies]
capnpc = "^0.10"
vergen = "3"
