[package]
name = "bioyino"
version = "0.7.0"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]
description = "StatsD-compatible, high-performance, fault-tolerant metric aggregator"
edition = "2018"
build = "build.rs"

[profile.release]
lto = true
overflow-checks = false

[dependencies]
clap="^2.33"
once_cell="^1.3"

thiserror="^1.0"

libc="^0.2"
num_cpus="^1.8"
futures="^0.1"
tokio="^0.1"
tokio-io="^0.1"
#tokio-codec="^0.1"

# new wave
tokio2 = { package = "tokio", version = "^0.2", features = ["net", "time", "sync", "macros", "io-util", "io-driver", "rt-core", "rt-util", "rt-threaded"] }
futures3 = { package = "futures", version = "^0.3", features = ["compat"] }
hyper13 = { package = "hyper", version = "^0.13" }
trust-dns-resolver = { version = "^0.19" }
url = "^2.1"
tokio-util = { version = "^0.3", features = ["codec", "compat"] }
bytes = { version = "^0.5", features = [ "serde" ] }
ring-channel = {version = "^0.8", features = ["futures_api"]}
capnp = "^0.13"
capnp-futures = "^0.13"

resolve="^0.2"
socket2 = { version = "^0.3", features = ["reuseport"] }
combine="^4.0"
hyper="^0.12"
mime="^0.3"
serde="^1.0"
serde_derive="^1.0"
serde_json="^1.0"
slog= { version = "^2.4", features = ["max_level_debug"] }
slog-term="^2.4"
slog-async="^2.3"
slog-scope="^4.0"
slog-stdlog="^4.0"
slog-syslog="^0.12"
log="^0.4"
toml="^0.5"
ftoa = "^0.1"

raft-tokio = { git = "https://github.com/Albibek/raft-tokio" }
rand = "^0.7"
rayon = "^1.0"
bioyino-metric = "^0.3"

[build-dependencies]
capnpc = "^0.12"
vergen = "^3"
