[package]
name = "bioyino"
version = "0.8.1-alpha"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]
description = "StatsD-compatible, high-performance, fault-tolerant metric aggregator"
edition = "2018"
build = "build.rs"

[profile.release]
lto = true
overflow-checks = false

[dependencies]
clap="^2.33"
once_cell="^1.3"

thiserror="^1.0"

libc="^0.2"
num_cpus="^1.8"
futures1 = { package = "futures", version = "^0.1" }
tokio1 = { package = "tokio", version = "^0.1" }
tokio-io="^0.1"
#tokio-codec="^0.1"

# new wave
tokio = { version = "^1.5", features = ["net", "time", "sync", "macros", "rt", "rt-multi-thread", "io-util"] }
tokio-stream = { version = "^0.1", features = ["sync" ]}
tokio-util = { version = "^0.6", features = ["codec", "compat"] }
futures = { version = "^0.3", features = ["compat"] }
hyper = { version = "^0.14", features = ["client", "server", "http1", "http2", "tcp"] }
trust-dns-resolver = { version = "^0.20" }
url = "^2.1"
bytes = { version = "^1.0", features = [ "serde" ] }
async-channel = "^1.6"
ring-channel = { version = "^0.9", features = ["futures_api"] }
capnp = "^0.14"
capnp-futures = "^0.14"
crossbeam-channel =  "^0.5"

resolve="^0.2"
array-init="^2.0"
socket2 = { version = "^0.4", features = ["all"] }
combine="^4.0"
mime="^0.3"
serde="^1.0"
serde_derive="^1.0"
serde_json="^1.0"
slog= { version = "^2.4", features = ["max_level_debug"] }
slog-term="^2.4"
slog-async="^2.3"
slog-scope="^4.0"
slog-stdlog="^4.0"
slog-syslog="^0.13"
log="^0.4"
toml="^0.5"
dtoa = "^0.4"

raft-tokio = { git = "https://github.com/Albibek/raft-tokio" }
rand = "^0.8"
bioyino-metric = "^0.5"
dipstick = "0.9.1"

[build-dependencies]
capnpc = "^0.14"
vergen = "^5"

[features]
default = []
f32 = []
