[package]
name = "metric"
version = "0.5.0"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]
description = "Library for handling metrics in bioyino"
edition = "2018"

[dependencies]
serde="^1.0"
serde_derive="^1.0"
failure="^0.1"
failure_derive="^0.1"
capnp = "^0.9"
combine="^3.6"
bytes = { version = "^0.4", features = [ "serde" ] }
num-traits="^0.2"

[build-dependencies]
capnpc = "^0.9"

